plugins/editorconfig/testData/org/editorconfig/language/codeinsight/inspections/rootDeclarationUniqueness/.editorconfig
root=true
<error descr="Only one top-level declaration is allowed">root=true</error>
